# NGPommed

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md
source/: acpi.c  audio.c  audio.h  beep.c  beep.h  cd_eject.c  cd_eject.h  conffile.c  conffile.h  evdev.c  evdev.h  evloop.c  evloop.h  gma950_backlight.c  kbd_auto.c  kbd_backlight.c  kbd_backlight.h  lcd_backlight.h  nv8600mgt_backlight.c  pommed.c  pommed.h  power.c  power.h  sysfs_backlight.c  timerfd-syscalls.h  video.c  video.h  x1600_backlight.c
source/mactel/: kbd_backlight.c  nv8600mgt_backlight.c
source/pmac/: kbd_backlight.c  pmu.c
source/pmac/ofapi/: of_api.h  of_externals.c  of_externals.h  of_internals.c  of_internals.h  of_standard.c  of_standard.h
